--- a/BarboBet/package.json
+++ b/BarboBet/package.json
@@ -11,7 +11,9 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.8.1",
     "nuxt": "^3.8.0",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   }
